updated styles slightly to fix background color issue on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,7 @@ body {
   }
 
 .header {
-  background-color: grey; 
+  background-color: grey !important; 
   /* height: 100px;
   width: 100%; */
 }
@@ -410,7 +410,7 @@ h2 {
     }
 
     .header {
-      background-color: lightblue;
+      background-color: lightblue !important;
     }
 
     .address-column {
